--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <label id="summary">
                                 I am a student at the University of Pretoria currently completing my third year
                                 of <br/> Bsc Information and Knowledge Systems majoring in Software Development. <br/>
-                                I have always exelled in teamwork as a reliable team member, I am a good organiser as well as a planner and I enjoy problem solving.
+                                I have always excelled in teamwork as a reliable team member, I am a good organiser as well as a planner and I enjoy problem solving.
                                 I am always open to take on new challenges and embrace new learning experiences.
                             </label>
                         </div>
