--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                                 I am a student at the University of Pretoria currently completing my third year
                                 of <br/> Bsc Information and Knowledge Systems majoring in Software Development. <br/>
                                 I have always excelled in teamwork as a reliable team member, I am a good organiser as well as a planner and I enjoy problem solving.
-                                I am always open to take on new challenges and embrace new learning experiences.
+                                I am always open to take on new challenges and embrace new learning experiences. <br><br>
+                                <address>
+                                    Contact Me at:  <a href="mailto:carmenjvrensburg07@gmail.com">carmenjvrensburg07@gmail.com</a>.<br> </address>
                             </label>
                         </div>
                     </div>
