--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <!-- Start Profile Section -->
     <section class="col-md-9 col-sm-12 col-xs-12 col-md-offset-3 first profile rez_about">
       <div class="rez_top_title">
-      		<h1>Hi, My Name is Carmen Janse v Rensburg</h1>
+      		<h1>Hi, My Name is <br> Carmen Janse v Rensburg</h1>
             <p>I am a Software Developer</p>
       </div>
       <h1 class="title">About Me</h1>
